# rustar-cli

./: .env.example  .gitignore  Cargo.toml
src/: client.rs  error.rs  main.rs
